# GameEngine

./: .gitignore  CMakeLists.txt  GraphicsEngine.sln  MiniVulkan.sln  build.ps1  macenv  winenv.bat
Application/: Application.vcxproj  Application.vcxproj.filters  Window.cpp  Window.h  main.cpp
Assets/Shaders/: default.metal
Engine/: CMakeLists.txt
Engine/Common/: AnimationSystem.cpp  AnimationSystem.h  BaseApplication.cpp  BaseApplication.h  CMakeLists.txt  Configuration.h  DrawingSystem.cpp  DrawingSystem.h  ECSWorld.cpp  ECSWorld.h  EventSystem.cpp  EventSystem.h  Global.cpp  Global.h  InputSystem.cpp  InputSystem.h  LogSystem.cpp  LogSystem.h  SceneSystem.cpp  SceneSystem.h  Setup.h  main.cpp
Engine/Component/: AnimationComponent.cpp  AnimationComponent.h  CMakeLists.txt  Component.cpp  FrameGraphComponent.cpp  FrameGraphComponent.h  LightComponent.cpp  LightComponent.h  MeshFilterComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/Entity/: CMakeLists.txt  Component.cpp  Component.h  ECSSystem.cpp  ECSSystem.h  Entity.cpp  Entity.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
Engine/Entity/Component/: AnimationComponent.cpp  AnimationComponent.h  CameraComponent.cpp  CameraComponent.h  MeshFilterComponent.cpp  MeshFilterComponent.h  MeshRendererComponent.cpp  MeshRendererComponent.h  PolylineRendererComponent.cpp  PolylineRendererComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/Entity/Import/: GLTF2Loader.cpp  GLTF2Loader.h
Engine/Entity/Light/: DirectionalLight.cpp  DirectionalLight.h
Engine/Entity/Material/: StandardMaterial.cpp  StandardMaterial.h
Engine/Entity/Mesh/: CubeMesh.cpp  CubeMesh.h  GLTF2Mesh.h  GLTFMesh.cpp  PlaneMesh.cpp  PlaneMesh.h
Engine/Entity/Scene/: SceneSystem.cpp  SceneSystem.h
Engine/Graphics/: CMakeLists.txt
Engine/Graphics/Device/: DrawingConstants.h  DrawingDevice.cpp  DrawingDevice.h  DrawingEffectPool.cpp  DrawingEffectPool.h  DrawingParameter.cpp  DrawingParameter.h  DrawingPass.cpp  DrawingPass.h  DrawingRawResource.h  DrawingResourceDesc.cpp  DrawingResourceDesc.h  DrawingResourceTable.cpp  DrawingResourceTable.h  DrawingStage.cpp  DrawingStage.h  DrawingStreamedResource.cpp  DrawingStreamedResource.h  DrawingTextureTarget.cpp  DrawingTextureTarget.h  DrawingType.h
Engine/Graphics/Device/D3D11/: DrawingDevice_D3D11.cpp  DrawingDevice_D3D11.h  DrawingRawResource_D3D11.cpp  DrawingRawResource_D3D11.h  DrawingUtil_D3D11.h
Engine/Graphics/Device/D3D12/: DrawingCommandManager_D3D12.cpp  DrawingCommandManager_D3D12.h  DrawingDescriptorAllocator_D3D12.cpp  DrawingDescriptorAllocator_D3D12.h  DrawingDevice_D3D12.cpp  DrawingDevice_D3D12.h  DrawingDynamicDescriptorHeap_D3D12.cpp  DrawingDynamicDescriptorHeap_D3D12.h  DrawingRawResource_D3D12.cpp  DrawingRawResource_D3D12.h  DrawingResourceStateTracker_D3D12.cpp  DrawingResourceStateTracker_D3D12.h  DrawingUploadAllocator_D3D12.cpp  DrawingUploadAllocator_D3D12.h  DrawingUtil_D3D12.h
Engine/Graphics/Renderer/: BaseRenderer.cpp  BaseRenderer.h  BasicPrimitiveRenderer.cpp  BasicPrimitiveRenderer.h  ForwardRenderer.cpp  ForwardRenderer.h  FrameGraph.cpp  FrameGraph.h  PolylineRenderer.cpp  PolylineRenderer.h  RenderQueue.cpp  RenderQueue.h
Engine/Interface/: IAnimationSystem.h  IApplication.h  IDrawingSystem.h  IECSWorld.h  IEventSystem.h  IInputSystem.h  ILight.h  ILogSystem.h  IMaterial.h  IMesh.h  IRenderTarget.h  IRenderable.h  IRenderer.h  IRuntimeModule.h  ISceneSystem.h  IShader.h  ITexture.h
Engine/Math/: Algorithm.h  Box2.h  Mat2x2.h  Mat2x2_imp.h  Mat3x3.h  Mat3x3_imp.h  Mat4x4.h  Mat4x4_imp.h  Matrix.h  Utility.h  Vec2.h  Vec2_imp.h  Vec3.h  Vec3_imp.h  Vec4.h  Vec4_imp.h  Vector.h
Engine/OpenWorld/: BasicTools.cpp  BasicTools.h  BasicTools.mm  BasicTools_Metal.mm  BasicTools_Vulkan.h  BasicTypes.h  CDevice_Metal.h  CDevice_Metal.mm  CDevice_Metal_Tools.h  CDevice_Metal_Tools.mm  CDevice_Vulkan.cpp  CDevice_Vulkan.h  Camera.cpp  Camera.h  IDevice.h  Light.cpp  Light.h  MetalTools.h  OpenWorld.cpp  OpenWorld.h
Engine/Util/: DirtyData.h  FPS.h  Macros.h  SafeQueue.h  Traits.h
MiniRaytracing/: AABB.cpp  AABB.h  BVHNode.cpp  BVHNode.h  BVHScene.cpp  BVHScene.h  BasicTools.cpp  BasicTools.h  BasicToolsRT.cpp  BasicToolsRT.h  Camera.cpp  Camera.h  CameraRT.cpp  CameraRT.h  Context.cpp  Context.h  ContextMNRT.cpp  ContextMNRT.h  Material.cpp  Material.h  MaterialDielectric.cpp  MaterialDielectric.h  MaterialDiffuse.cpp  MaterialDiffuse.h  MaterialLambertian.cpp  MaterialLambertian.h  MaterialMetal.cpp  MaterialMetal.h  MaterialRT.cpp  MaterialRT.h  MaterialRT_Dielectric.cpp  MaterialRT_Dielectric.h  MaterialRT_Lambertian.cpp  MaterialRT_Lambertian.h  MaterialRT_Metal.cpp  MaterialRT_Metal.h  MiniRaytracing.vcxproj  MiniRaytracing.vcxproj.filters  Object.cpp  Object.h  (+41 more)
MiniVulkan/: BasicTools.h  MiniVulkan.vcxproj  MiniVulkan.vcxproj.filters  StandardSurface.frag.glsl  StandardSurface.vert.glsl  VkBufferZHU.cpp  VkBufferZHU.h  VkCommonZHU.cpp  VkCommonZHU.h  VkDeviceZHU.cpp  VkDeviceZHU.h  VkModelZHU.cpp  VkPipelineZHU.h  VkReflectionZHU.cpp  VkReflectionZHU.h  VkShaderModuleZHU.cpp  VkShaderModuleZHU.h  VulkanAPI.cpp  VulkanCanvas.cpp  VulkanCanvas.h  VulkanConfig.h
MiniVulkan_/: StandardSurface.vert.glsl  VkDeviceZHU.cpp  VkModelZHU.h  VkPipelineZHU.cpp  VulkanAPI.h
Modules/HelloWorld/: CDevice_Metal.h  CDevice_Metal.mm  CImageLoader_STB.cpp  CImageLoader_STB.h  CMeshLoader_OBJ.cpp  CMeshLoader_OBJ.h  Camera.cpp  Camera.h  Config.h  HelloWorld.cpp  HelloWorld.h  IDevice.h  IImageLoader.h  IMeshLoader.h  IResourceTable.h  Material.cpp  Material.h  Mesh.cpp  (+3 more)
Test/: CMakeLists.txt
Test/Event/: CMakeLists.txt  EventTest.cpp
Test/GLTF2/: CMakeLists.txt  GLTF2Test.cpp
Test/Game/: CMakeLists.txt  GameTest.cpp
Zhujie/: AppDelegate.h  AppDelegate.m  GameViewController.h  GameViewController.m  Renderer.h  Renderer.m  ShaderTypes.h  Shaders.metal  main.m
Zhujie.xcodeproj/: project.pbxproj
Zhujie_macOS/: Main.storyboard  ViewController.h  ViewDelegate.mm
(+58 files in other folders)
