cmake_minimum_required(VERSION 3.2)
set (CMAKE_C_STANDARD 17)
set (CMAKE_CXX_STANDARD 17)
project (GraphicsEngine)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)
set_property(GLOBAL PROPERTY PREDEFINED_TARGETS_FOLDER "")
set(FOLDER_ENGINE "Engine")
set(FOLDER_APP "App")
set(FOLDER_TEST "TestCase")

include_directories("${PROJECT_SOURCE_DIR}/Engine/Interface")
include_directories("${PROJECT_SOURCE_DIR}/Engine/Util")
include_directories("${PROJECT_SOURCE_DIR}/Engine/Common")
include_directories("${PROJECT_SOURCE_DIR}/Engine/Graphics")
include_directories("${PROJECT_SOURCE_DIR}/Engine/Graphics/Device")
include_directories("${PROJECT_SOURCE_DIR}/Engine/Graphics/Renderer")
include_directories("${PROJECT_SOURCE_DIR}/Engine/Entity")
include_directories("${PROJECT_SOURCE_DIR}/Engine/Entity/Component")
include_directories("${PROJECT_SOURCE_DIR}/Engine/Entity/Mesh")
include_directories("${PROJECT_SOURCE_DIR}/Engine/Entity/Scene")
include_directories("${PROJECT_SOURCE_DIR}/Engine/Math")
include_directories("${PROJECT_SOURCE_DIR}/Platform/Windows")

add_subdirectory(Engine)
add_subdirectory(Platform)
add_subdirectory(Test)